--- a/css/ogs_admin.css
+++ b/css/ogs_admin.css
@@ -206,24 +206,22 @@ nav:after,nav:before{
 	transition: 0.5s ease;
 }
 
-nav:hover,nav.hover{
+nav:hover,nav.hover,nav.pc{
 	left: 0px;
 }
 
-/*
-nav:hover + main{
+nav.pc + main{
 	width: calc(100% - 200px);
 	left: 200px;
 }
-*/
 
-nav:hover:after,nav.hover:after{
+nav:hover:after,nav.hover:after,nav.pc:after{
 	width: 200px;
 	background: #FFF;
 	box-shadow: 0 2px 10px #333; 
 }
 
-nav:hover:before,nav.hover:before{
+nav:hover:before,nav.hover:before,nav.pc:before{
 	left: 200px;
 }
 
@@ -489,8 +487,8 @@ footer{
 }
 
 /* media */
-#nav_menu{
-	/* display: none; */
+#nav_menu.pc{
+	display: none;
 }
 
 @media screen and (max-width: 900px){
